# bean

./: .gitignore  .prettierignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  EXAMPLE.md  POSITIONING.md  README.md  SECURITY.md  install.sh  package-lock.json  package.json  tsconfig.json
.claude-plugin/: marketplace.json  plugin.json
.codex-plugin/: plugin.json
.github/workflows/: ci.yml  release.yml
benchmark/: README.md  oracle_pattern_bench.py
hooks/: bean-stop.sh  hooks.json
rs/: Cargo.toml
rs/src/: main.rs
schemas/: claim.schema.json  lessons.schema.json  result.schema.json  run.schema.json  trace.schema.json
skills/bean/: SKILL.md
skills/bean/references/: bean-check.md  belief-revision.md  codex-blindspot.md  convergence.md  delegate.md  discover.md  grainulation.md  lessons.md  oracle-gate.md  runtime-claude.md  runtime-codex.md  runtime.md  self-critique.md  trace.md  verbosity.md  verify.md
test/: bean-check.test.js  codex-portability.test.js  conformance.mjs  smoke.test.js
test/evals/: README.md
test/fixtures/asymmetric-conflict/.bean/: claims.json
test/fixtures/converged/.bean/: claims.json
test/fixtures/coverage-warnings/.bean/: claims.json
test/fixtures/dominance-conflict/.bean/: claims.json
test/fixtures/open-risk/.bean/: claims.json
test/fixtures/open-unknown/.bean/: claims.json
test/fixtures/residual-no-reason/.bean/: claims.json
test/fixtures/residual-with-reason/.bean/: claims.json
test/fixtures/traces/: run-0001.json  run-0002.json  run-0003.json  run-0004.json
(+4 files in other folders)
